chore: some other chages

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-CONTAINER_PREFIX=quran_app
+CONTAINER_PREFIX=quranapp
 
 # Postgres Config
-DB_DATABASE=quran_app
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_DATABASE=quranapp
+DB_USERNAME=quranapp
+DB_PASSWORD=quranapp
 DB_PORT=5432
 
 # Other Config
