--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,7 @@
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2",
-        "vite": "^4.0.0"
+        "vite": ">=4.3.9"
     },
     "dependencies": {
         "@alpinejs/collapse": "^3.12.0",
